--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</nav>
 
 		<div >
-			<a href="http://www.google.com" target"_blank"><img src="http://randomc.net/image/Strike%20the%20Blood/Strike%20the%20Blood%20-%2001%20-%20Large%2002.jpg" img class="top"></a>
+			<a href="http://www.google.com" target"_blank"><img src="http://1.bp.blogspot.com/-83tjpD0webs/UlDK_rAo9ZI/AAAAAAAAFWI/_OYB7wtDSqo/s1600/strike+the+blood+01b.jpg" img class="top"></a>
 		</div>	
 
 		<div>
