--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 		<div>
 			<p class="adam">
 				&#34;I rejected your reality and substitute my own.&#34;	&#45;Adam Savage&#44; Mythbusters		
-			</p>	
+			</p>
+			
+			<p class="adam">
+				I&#39;ll listen to your ideas&#44; but who I would accept it.	
+			</p>
 		</div>
 
 		<div>
