--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</p>
 			
 			<p class="adam">
-				I&#39;ll listen to your ideas&#44; but who I would accept it.	
+				I&#39;ll listen to your ideas&#44; but who said I would accept it.	
 			</p>
 		</div>
 
